# PointCloudLib

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.server  LICENSE  README.docker.md  README.md  docker-compose.yml  vcpkg.json
scripts/: rd-up.ps1
src/: main.cpp
src/core/features/: normal_estimator.cpp  normal_estimator.hpp
src/core/filters/: filters.hpp  pass_through_filter.cpp  pass_through_filter.hpp  voxel_grid_filter.cpp  voxel_grid_filter.hpp
src/core/io/: point_cloud_io.cpp  point_cloud_io.hpp
src/core/registration/: icp_registration.cpp  icp_registration.hpp
src/core/segmentation/: ransac_plane_segmenter.cpp  ransac_plane_segmenter.hpp  region_growing_segmenter.cpp  region_growing_segmenter.hpp  segmentation.hpp
src/core/types/: point_types.hpp
src/server/: api_routes.cpp  http_server.cpp  http_server.hpp  serialization.hpp
tests/: test_filters.cpp  test_io.cpp  test_region_growing.cpp
tests/data/: sample.pcd
ui/: .dockerignore  .env.example  Dockerfile  next.config.js  package.json  tsconfig.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/css/: page.module.css
ui/src/components/: ControlPanel.tsx  FileUpload.tsx  Layout.tsx  PointCloud.tsx  PointCloudViewer.tsx
ui/src/components/css/: ControlPanel.module.css  FileUpload.module.css  Layout.module.css  PointCloudViewer.module.css
ui/src/components/features/: NormalEstimatorControls.tsx
ui/src/components/features/css/: NormalEstimatorControls.module.css
ui/src/components/filters/: PassThroughControls.tsx  VoxelGridControls.tsx
ui/src/components/filters/css/: PassThroughControls.module.css  VoxelGridControls.module.css
ui/src/components/registration/: ICPRegistrationControls.tsx
ui/src/components/registration/css/: ICPRegistrationControls.module.css
ui/src/components/segmentation/: RansacControls.tsx  RegionGrowingControls.tsx
ui/src/components/segmentation/css/: RansacControls.module.css  RegionGrowingControls.module.css
ui/src/lib/: api.ts
ui/src/store/: pointCloudStore.ts
